k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capstone-deployment
  labels:
    app: capstone
spec:
  replicas: 2
  selector:
    matchLabels:
      app: capstone
  template:
    metadata:
      labels:
        app: capstone
    spec:
      containers:
      - name: capstone-container
        image: prasanth631/capstone_pro:latest
        ports:
        - containerPort: 8082  # Must match your Spring Boot server.port
