k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capstone-service
  namespace: capstone-app
  labels:
    app: capstone
spec:
  type: NodePort
  selector:
    app: capstone
  ports:
  - name: http
    protocol: TCP
    port: 8082
    targetPort: 8082
    nodePort: 30080
  sessionAffinity: ClientIP
